ADD query parameters on pet: Offset, Limit, NoPhoto
